Add file handlers and endpoints to the routes, also update swagger doc
